fix: update headings from h2 to h1 and increase color contrast to improve a11y in Auth, Login and Register components

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -73,7 +73,7 @@ section {
   > div {
     padding: 10px;
     > a {
-      color: $grey;
+      color: $high-contrast-grey;
       &:hover {
         cursor: pointer;
         color: $light-blue;
