--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -23,7 +23,7 @@ section {
         background: $hover-grey;
       }
     }
-    h2 {
+    h1 {
       font-size: 61px;
       font-weight: 700;
     }
@@ -117,7 +117,7 @@ form {
         left: 0;
       }
 
-      h2 {
+      h1 {
         font-size: 40px;
       }
 
